学生答疑室

--- a/src/main/resources/templates/shouye/dayiManage.html
+++ b/src/main/resources/templates/shouye/dayiManage.html
@@ -88,7 +88,7 @@
             <td th:utext="${question.content}"></td>
             <td th:text="${question.courseName}"></td>
             <td th:text="${question.isreply}?'是':'否'" ></td>
-            <td th:text="${question.dic_datetime}"></td>
+            <td th:text="${question.questionDatetime}"></td>
             <td>
 <!--                <a th:href="@{|${question.id}/dayiMore|}">查看</a>-->
 <!--                <button type="button" class="layui-btn layui-btn-primary layui-btn-sm">-->
