--- a/src/main/resources/templates/shouye/dayiManage.html
+++ b/src/main/resources/templates/shouye/dayiManage.html
@@ -1,122 +1,101 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>答疑室提问管理</title>
-    <link rel="stylesheet" href="../../static/css/layui.css">
-</head>
-<style type="text/css">
-    /*div{
-        margin: 10px;
-    }*/
-    #head{
-        margin-top: 30px;
-    }
-    #main{
-        margin-top: 30px;
-        padding: 10px;
-        /*border: 1px black solid;*/
-    }
-    #d{
-        text-align: right;
-    }
-    #name{
-        margin-top: 30px;
-    }
-    .text-overflow {
-        display:block;/*内联对象需加*/
-        width:31em;/*指定宽度*/
-        word-break:keep-all;/* 不换行 */
-        white-space:nowrap;/* 强制在同一行内显示所有文本，直到文本结束或者遭遇 br 对象。不换行 */
-        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow:ellipsis;/* IE 专有属性，当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>答疑室提问管理</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f7f7f7;
+			}
+			.layui-fluid {
+				padding: 20px;
+				background: #fff;
+			}
+			.layui-form-label {
+				width: auto;
+				padding-left: 0;
+            }
+            #pager{
+                text-align: center;
+            }
+		</style>
+	</head>
 
-    table{
-        width:30em;
-        table-layout:fixed;/* 只有定义了表格的布局算法为fixed，下面td的定义才能起作用。 */
-    }
-    td{
-        width:100%;
-        word-break:keep-all;/* 不换行 */
-        white-space:nowrap;/* 不换行 */
-        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-        text-overflow:ellipsis;/* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
-    }
-    .layui-table{
-        text-align: center;
-    }
-    .layui-table th {
-        text-align: center;
-        font-weight: 900;
-    }
-</style>
-<body>
-
-<div id="main" class="layui-container">
-    <select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')" style="margin-top: 13px;">
-        <option>请选择</option>
-        <div th:each="courseInfo:${courseInfoList}" >
-            <option th:value="|/question/${courseInfo.getId()}/list|"  th:text="${courseInfo.getCourseName()}">18信管01</option>
-        </div>
-    </select>
-    <table class="layui-table" >
-        <colgroup>
-            <col >
-            <col >
-            <col>
-        </colgroup>
-        <thead>
-        <tr>
-            <th style="width: 9%;">序号</th>
-            <th style="width: 9%;">学生ID</th>
-            <th style="width: 10%;">姓名</th>
-            <th style="width: 18%;">问题内容</th>
-            <th style="width: 10%;">课程名称</th>
-            <th style="width: 12%;">是否回复</th>
-            <th style="width: 16%;">记录时间</th>
-            <th>操作</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="question:${questionPageInfo.content}">
-            <td th:text="${question.id}"></td>
-            <td th:text="${question.sid}"></td>
-            <td th:text="${question.stu_uname}"></td>
-            <td th:utext="${question.content}"></td>
-            <td th:text="${question.courseName}"></td>
-            <td th:text="${question.isreply}?'是':'否'" ></td>
-            <td th:text="${question.questionDatetime}"></td>
-            <td>
-<!--                <a th:href="@{|${question.id}/dayiMore|}">查看</a>-->
-<!--                <button type="button" class="layui-btn layui-btn-primary layui-btn-sm">-->
-<!--                    <a th:href="@{|${question.id}/delete|}">删除</a>-->
-<!--                </button>-->
-                <a type="button" class="layui-btn layui-btn-sm" th:href="@{|/question/${question.id}/dayiMore|}">查看</a>
-                <a type="button" class="layui-btn layui-btn-sm layui-bg-red" th:href="@{|/question/${question.id}/delete|}">删除</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-
-    <div style="margin:0 auto; width: 80%; text-align: center;">
-        <p>当前 <span th:text="${questionPageInfo.number}+1"></span> 页,
-            总 <span th:text="${questionPageInfo.totalPages}"></span> 页,
-            共 <span th:text="${questionPageInfo.totalElements}"></span> 条记录</p>
-        <a th:href="@{/question/list}">首页</a>
-        <a th:href="@{/question/list(pageNum=${questionPageInfo.hasPrevious()}?${questionPageInfo.number}-1:0)}">上一页</a>
-        <a th:href="@{/question/list(pageNum=${questionPageInfo.hasNext()}?${questionPageInfo.number}+1:${questionPageInfo.number})}">下一页</a>
-        <a th:href="@{/question/list(pageNum=${questionPageInfo.totalPages}-1)}">尾页</a>
-    </div>
-</div>
-
-
-
-<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
-</body>
+	<body>
+		<div class="layui-fluid">
+			<form class="layui-form">
+				<div class="layui-form-item">
+					<label class="layui-form-label">所属课程</label>
+					<div class="layui-input-inline">
+						<select name="interest" lay-filter="id">
+							<option value="/question/teacherlist">全部</option>
+							<option th:each="courseInfo:${courseInfoList}" th:selected="${courseInfo.id == courseId}" th:value="|/question/${courseInfo.getId()}/list|" th:text="${courseInfo.getCourseName()}"></option>
+						</select>
+					</div>
+				</div>
+			</form>
+			<table class="layui-table">
+				<colgroup>
+					<col />
+					<col />
+					<col />
+				</colgroup>
+				<thead>
+					<tr>
+						<th style="width: 9%;">序号</th>
+						<th style="width: 9%;">学生ID</th>
+						<th style="width: 10%;">姓名</th>
+						<th style="width: 18%;">问题内容</th>
+						<th style="width: 10%;">课程名称</th>
+						<th style="width: 12%;">是否回复</th>
+						<th style="width: 16%;">记录时间</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="question:${questionPageInfo.content}">
+						<td th:text="${question.id}"></td>
+						<td th:text="${question.sid}"></td>
+						<td th:text="${question.stu_uname}"></td>
+						<td th:utext="${question.content}"></td>
+						<td th:text="${question.courseName}"></td>
+						<td th:text="${question.isreply}?'是':'否'"></td>
+						<td th:text="${question.questionDatetime}"></td>
+						<td>
+							<a type="button" class="layui-btn layui-btn-sm" th:href="@{|/question/${question.id}/dayiMore|}">查看</a>
+							<a type="button" class="layui-btn layui-btn-sm layui-bg-red" th:href="@{|/question/${question.id}/delete|}">删除</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div id="pager"></div>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script th:inline="javascript">
+			$(function () {
+				var form = layui.form,
+					laypage = layui.laypage
+				laypage.render({
+					elem: 'pager',
+                    layout:['count','prev', 'page', 'next'],
+					curr: parseInt('[[${questionPageInfo.number}]]') + 1,
+					count: parseInt('[[${questionPageInfo.totalElements}]]'),
+					jump: function (obj, first) {
+						if (!first) {
+							window.location.href = window.location.origin + window.location.pathname + '?pageNum=' + (obj.curr - 1)
+						}
+					}
+				})
+				form.on('select(id)', function (data) {
+					window.location.href = data.value
+				})
+			})
+		</script>
+	</body>
 </html>
-
