--- a/src/main/resources/templates/kuangjia/nocoursechoose.html
+++ b/src/main/resources/templates/kuangjia/nocoursechoose.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>error</title>
-    <meta name="renderer" content="webkit|ie-comp|ie-stand">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
-    <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="stylesheet" href="/static/css/font.css">
-    <link rel="stylesheet" href="/static/css/xadmin.css">
-    <!--    <link rel="stylesheet" href="../static/css/layui.css" media="all">-->
-    <style>
-        button {
-            margin-top: 2%;
-
-            width: 130px;
-            height: 35px;
-            font-size: 16px;
-            margin-left: 5%;
-            background-color: rgb(57, 61, 73);
-            border-color: rgb(57, 61, 73);
-            color: white;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
-<div class="layui-container">
-<!--    <button type="button" onclick="Javascript:history.back(-1);" href="#" class="layui-btn layui-btn-primary">返回上一级-->
-<!--    </button>-->
-<!--    请陈亮对该页面进行美化-->
-<!--    请陈亮对该页面进行美化-->
-<!--    请陈亮对该页面进行美化-->
-<!--    请陈亮对该页面进行美化-->
-<!--    请陈亮对该页面进行美化-->
-    <div class="fly-panel">
-        <div class="fly-none">
-            <a>休息一下吧</a><br>
-            <h1><a th:text="|请陈亮对该页面进行美化${emsg}|"></a></h1><br>
-            <a href="/newsinfo/newslist">回到首页</a>
-        </div>
-    </div>
-</div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
+		<meta name="renderer" content="webkit" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>选择课程 - 旅游大数据虚拟仿真实验教学平台</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<link rel="stylesheet" href="../../static/new/css/select.css" />
+	</head>
+	<body>
+		<div class="layui-layout layui-layout-admin">
+			<div class="layui-header">
+				<div class="top-logo cl">
+					<img src="../../static/new/images/sctu_w.png" />
+					<p>旅游大数据虚拟仿真实验教学平台</p>
+					<span>实验中心</span>
+				</div>
+			</div>
+			<div class="layui-side layui-bg-black">
+				<div class="layui-side-scroll">
+					<ul class="layui-nav layui-nav-tree">
+						<li class="layui-nav-item">
+							<a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页</a>
+						</li>
+						<li class="layui-nav-item layui-nav-itemed">
+							<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
+							<dl class="layui-nav-child">
+								<dd><a href="javascript:;">考核实验</a></dd>
+								<dd><a href="javascript:;">全部实验</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a href=""><i class="layui-icon layui-icon-survey"></i>理论测试</a>
+						</li>
+						<li class="layui-nav-item">
+							<a href=""><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
+						</li>
+						<li class="layui-nav-item">
+							<a href=""><i class="layui-icon layui-icon-read"></i>操作说明</a>
+						</li>
+						<li class="layui-nav-item">
+							<a href=""><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="select-cover">
+			<div class="select-error">
+                <p th:text="${emsg}?${emsg}:'很抱歉，发生了一个错误！'"></p>
+                <a href="/newsinfo/newslist" class="layui-btn">返回首页</a>
+            </div>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+	</body>
 </html>
