--- a/src/main/resources/templates/role/res.html
+++ b/src/main/resources/templates/role/res.html
@@ -39,11 +39,13 @@
             margin-left:1rem;
             margin-right:1rem;
             padding-top: 0.5rem;
-            margin-bottom: 0.5rem;
+            /*margin-bottom: 0.5rem;*/
             line-height: 2rem;
             font-size: 15px;
             /*display: flex;*/
             /*float: left;*/
+            width: auto;
+            height: 40px;
         }
         .d2{
             float: right;
@@ -76,7 +78,7 @@
                     </div>
 
                     <div class="d2">
-                        <a class="layui-btn" th:href="@{|/admin/role/list|}">返回</a>
+                        <a class="layui-btn" th:href="@{|/admin/role/list|}" href="list.html">返回</a>
                     </div>
                 </div>
                 <div class="layui-card-body">
