--- a/src/main/resources/templates/shouye/dayiMore.html
+++ b/src/main/resources/templates/shouye/dayiMore.html
@@ -94,8 +94,8 @@
 
             <hr/>
 
-            <p style="text-align: left; margin: 10px; float: left;">回复人:<a type="text" th:text="${reply.reply_pname}"></a></p>
-            <p style="text-align: right; margin: 10px; float: right;">回复时间:<a type="text" th:text="${reply.dic_datetime}"></a></p>
+            <p style="text-align: left; margin: 10px; float: left;">回复人:<a type="text" th:text="${reply.replyPname}"></a></p>
+            <p style="text-align: right; margin: 10px; float: right;">回复时间:<a type="text" th:text="${reply.dicDatetime}"></a></p>
 
             <div>
                 <button type="submit" class="layui-btn layui-btn-primary layui-btn-sm">
