老师答疑室问题筛选

--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -79,7 +79,7 @@
 							<a class="to-url" data-url="/admin/user/list"><i class="layui-icon layui-icon-username"></i>教师账号管理</a>
 						</li>
 						<li class="layui-nav-item">
-							<a class="to-url" data-url="/question/teacherlist"><i class="layui-icon layui-icon-help"></i>学生答疑管理</a>
+							<a class="to-url" data-url="/question/teacherlist/-1"><i class="layui-icon layui-icon-help"></i>学生答疑管理</a>
 						</li>
 						<li class="layui-nav-item">
 							<a class="to-url" data-url="monitor"><i class="layui-icon layui-icon-console"></i>平台服务监控</a>
