--- a/src/main/resources/templates/kaohe/lastTestScore.html
+++ b/src/main/resources/templates/kaohe/lastTestScore.html
@@ -144,12 +144,9 @@
 						<tr th:each="one:${allStu}" th:if="${one.getClassId()} == ${class.getClassId()}">
 							<td ><p th:text="${one.getStuXuehao()}" style="margin-left: -50%;">12345678</p></td>
 							<td ><p th:text="${one.getStuName()}">12345678</p></td>
-							<td ><p th:text="${one.getClassId()}">12345678</p></td>
 							<div th:each="stuInfo,stat:${allInfo}" th:if="${stuInfo.getXuehao()} == ${one.getStuXuehao()}">
-
+								<td ><p th:text="${stuInfo.getsClassName()}">12345678</p></td>
 								<td th:if="${stat.index >= 0}" ><p th:text="${stuInfo.getmScore()}">12345678</p></td>
-
-
 							</div>
 						</tr>
 					</div>
