--- a/src/main/resources/templates/shiyan_baogao/bg_teacher.html
+++ b/src/main/resources/templates/shiyan_baogao/bg_teacher.html
@@ -130,7 +130,7 @@
     </style>
 </head>
 <body>
-<form th:action="@{|/collegereport/mark/${collegeReport.getMid()}/${stuid}/${arrangeId}|}" method="post">
+<form th:action="@{|/collegereportmark/${collegeReport.getMid()}/${stuid}/${arrangeId}|}" method="post">
 <div class="layui-container">
     <div class="layui-row">
         <div class="layui-col-xs12 t_img">
