--- a/src/main/resources/templates/home_page/study_situation.html
+++ b/src/main/resources/templates/home_page/study_situation.html
@@ -22,7 +22,7 @@
 				<div class="lessions-list">
 					<div class="lessions-slide">
 						<div class="slide" th:each="courseInfo:${courseInfos}">
-							<a th:href="@{|/learning/learningList/${courseInfo.getId()}|}" >
+							<a th:href="@{|/learningfront/learningList/${courseInfo.getId()}|}" >
 								<div class="lession-item" th:classappend="${courseInfo.getId() == courseId} ? 'active'" th:text="${courseInfo.getCourseName()}">课程名称1</div>
 							</a>
 						</div>
@@ -40,7 +40,7 @@
 						<div class="reports-slide">
 							<div class="slide" th:each="effect:${effects}">
 								<div class="report-item">
-									<a th:href="@{|/learning/effectDetails/${effect.id}|}">
+									<a th:href="@{|/learningfront/effectDetails/${effect.id}|}">
 										<img src="../../static/new/images/1.jpg" th:src="@{'/upload/'+${effect.effect_imgurl}}" />
 										<p>效果展示名称1</p>
 									</a>
